--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       dockerfile: Dockerfile.sqlserver  # Custom Dockerfile for SQL Server
     container_name: "${SQL_SERVER}"  # Use environment-specific container name
     environment:
+      ENV_FILE: ".env.${FLASK_ENV}"
       ACCEPT_EULA: "Y"
       SA_PASSWORD: "${DBPWD}"
       COMPOSE_PROJECT_NAME: "${FLASK_ENV}_project"  # Dynamically set project name
