05. Find ENV File inside Container

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -97,14 +97,10 @@ jobs:
       - name: Execute DB Scripts for Dev
         run: |
             docker exec -i dev_sqlserver bash -c "
-                echo 'Starting execution of SQL scripts in Sprint Folder: ${{ env.SPRINT_FOLDER }}...' &&
+                echo 'Starting execution of SQL scripts in Sprint Folder: ${SPRINT_FOLDER}...' &&
                 cd /var/opt/sqlserver/db &&
                 chmod +x execute-sql-scripts.sh &&
-                ./execute-sql-scripts.sh \
-                    ISPRINT_FOLDER='${{ env.SPRINT_FOLDER }}' \
-                    IDBUID='${{ secrets.DBUID_DEV }}' \
-                    IDBPWD='${{ secrets.DBPWD_DEV }}' \
-                    IDATABASE='${{ secrets.DATABASE_DEV }}'
+                ./execute-sql-scripts.sh
             "
 
 
