--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -91,16 +91,16 @@ jobs:
             docker-compose -f docker-compose.yml --env-file %ENV_FILE% -p dev up --build -d
         shell: cmd #see what is happening...
         
-      - name: Debug Sprint Folder in Execute Scripts Step
-        run: echo "SPRINT_FOLDER=${{ env.SPRINT_FOLDER }}"
-      
-      - name: Execute DB Scripts for Dev #test exec
-        run: |
-            docker exec -i dev_sqlserver bash -c "
-                echo 'Starting execution of SQL scripts in Sprint Folder: ${SPRINT_FOLDER}...' &&
-                cd /var/opt/sqlserver/db &&
-                ./execute-sql-scripts.sh
-            "
+      #- name: Debug Sprint Folder in Execute Scripts Step
+      #  run: echo "SPRINT_FOLDER=${{ env.SPRINT_FOLDER }}"
+      #
+      #- name: Execute DB Scripts for Dev #test exec
+      #  run: |
+      #      docker exec -i dev_sqlserver bash -c "
+      #          echo 'Starting execution of SQL scripts in Sprint Folder: ${SPRINT_FOLDER}...' &&
+      #          cd /var/opt/sqlserver/db &&
+      #          ./execute-sql-scripts.sh
+      #      "
 
 
   cd_qa:
