30. Branch change to add new scripts

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,6 +15,7 @@ jobs:
   ci_dev:
     name: Continuous Integration for Dev
     runs-on: self-hosted
+    if: startsWith(github.ref, 'refs/heads/feature/')
     environment: dev
     steps:
       - name: Checkout Code
