--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -103,6 +103,9 @@ jobs:
         uses: actions/github-script@v6
         with:
             script: |
+                if (!context.payload.pull_request) {
+                    throw new Error("This action can only run on pull request events.");
+                }
                 const approval = await github.rest.reactions.createForIssueComment({
                     owner: context.repo.owner,
                     repo: context.repo.repo,
@@ -110,6 +113,7 @@ jobs:
                     content: "+1",
                 });
                 console.log("Approval received:", approval);
+            github-token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Checkout Code
         uses: actions/checkout@v3
