--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -99,20 +99,9 @@ jobs:
     environment: qa
     steps:
     
-      - name: Wait for Manual Approval
-        if: github.ref == 'refs/heads/develop'
-        uses: actions/github-script@v6
+      - name: Require Manual Approval
+        uses: reviewdog/action-manual-approval@v1
         with:
-            script: |
-                const { data: approvals } = await github.actions.createWorkflowDispatch({
-                    owner: context.repo.owner,
-                    repo: context.repo.repo,
-                    ref: github.ref,
-                    inputs: {
-                    approve: true
-                    }
-                });
-                console.log("Approval dispatched:", approvals);
             github-token: ${{ secrets.GITHUB_TOKEN }}
 
       
