--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -119,7 +119,8 @@ jobs:
             if ($COMMIT_MSG -match $pattern) {
                 $SPRINT_FOLDER = $Matches[0] -replace "feature/", ""
                 Write-Output "Sprint Folder: $SPRINT_FOLDER"
-                "SPRINT_FOLDER=$SPRINT_FOLDER" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+                "SPRINT_FOLDER=$SPRINT_FOLDER"
+                echo "SPRINT_FOLDER=$SPRINT_FOLDER" >> $env:GITHUB_ENV
             } else {
                 Write-Output "Error: Commit message does not match the expected format 'feature/ITBMSPR-XXXXX'."
                 exit 1
