--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -101,6 +101,7 @@ jobs:
     
       - name: Checkout Code
         uses: actions/checkout@v3
+            fetch-depth: 1  # Ensures only the latest commit is fetched
 
       - name: Mark Repository as Safe
         run: git config --global --add safe.directory C:/actions-runner/_work/sqlservercicddemo/sqlservercicddemo
