--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -101,6 +101,7 @@ jobs:
     
       - name: Checkout Code
         uses: actions/checkout@v3
+        with:
             fetch-depth: 1  # Ensures only the latest commit is fetched
 
       - name: Mark Repository as Safe
