--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -112,16 +112,17 @@ jobs:
         shell: powershell
         run: |
             Write-Host "Extracting Sprint Folder from the Commit Message..."
-            # Get the latest commit message
-            $COMMIT_MSG = git log -1 --pretty=%B
-            Write-Host "Commit Message: $COMMIT_MSG"
-            # Check if the commit message matches the expected format
-            if ($COMMIT_MSG -match "feature\/ITBMSPR-\d{5}") {
-                # Extract the sprint folder name
-                $SPRINT_FOLDER = ($Matches[0] -replace "feature\/", "")
-                Write-Host "Sprint Folder: $SPRINT_FOLDER"
-                # Export it for subsequent steps
-                echo "SPRINT_FOLDER=$SPRINT_FOLDER" >> $env:GITHUB_ENV
+            # Extract the commit message
+            $CommitMessage = git log -1 --pretty=%B
+            Write-Host "Commit Message: $CommitMessage"
+            # Regular expression to match the sprint folder name
+            if ($CommitMessage -match "feature\/ITBMSPR-\d{5}") {
+                # Safely extract the sprint folder
+                $SPRINT_FOLDER = $Matches[0] -replace "feature\/", ""
+                Write-Host "Extracted Sprint Folder: $SPRINT_FOLDER"
+            
+                # Export the value for subsequent steps
+                Write-Output "SPRINT_FOLDER=$SPRINT_FOLDER" >> $env:GITHUB_ENV
             } else {
                 throw "Error: Commit message does not match the expected format 'feature/ITBMSPR-XXXXX'."
             }
