feature/ITBMSPR-00001 53. Branch change to add new scripts

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -118,16 +118,13 @@ jobs:
             # Ensure the commit message contains "feature/"
             if ($CommitMessage -match "feature/") {
                 # Find the starting index of "feature/"
-                $StartIndex = $CommitMessage.IndexOf("feature/") + 8
-                
+                $StartIndex = $CommitMessage.IndexOf("feature\/") + 8
                 # Determine the end of the sprint folder (next space or end of string)
                 $EndIndex = $CommitMessage.IndexOf(" ", $StartIndex)
                 if ($EndIndex -eq -1) { $EndIndex = $CommitMessage.Length }
-                
                 # Extract the sprint folder
                 $SPRINT_FOLDER = $CommitMessage.Substring($StartIndex, $EndIndex - $StartIndex)
                 Write-Host "Extracted Sprint Folder: $SPRINT_FOLDER"
-            
                 # Export for further steps
                 Write-Output "SPRINT_FOLDER=$SPRINT_FOLDER" >> $env:GITHUB_ENV
             } else {
